--- a/jxl/Makefile
+++ b/jxl/Makefile
@@ -24,6 +24,7 @@ $(OUT_JS): jxl.cpp $(CODEC_BUILD_DIR)/lib/libjxl.a $(CODEC_BUILD_DIR)/lib/libjxl
 		-I $(CODEC_BUILD_DIR)/lib/include \
 		-I $(CODEC_DIR)/third_party/highway \
 		-I $(CODEC_DIR)/third_party/skcms \
+		-I $(CODEC_DIR)/third_party/libpng \
 		--bind \
 		--closure 1 \
 		-s INVOKE_RUN=0 \
@@ -33,10 +34,18 @@ $(OUT_JS): jxl.cpp $(CODEC_BUILD_DIR)/lib/libjxl.a $(CODEC_BUILD_DIR)/lib/libjxl
 		-s ENVIRONMENT=$(ENVIRONMENT) \
 		-s EXPORT_ES6=1 \
 		-s EXPORT_NAME="$(basename $(@F))" \
+		-s USE_LIBPNG=1 \
+		-DJPEGXL_ENABLE_APNG=1 \
 		-o $@ \
 		$+ \
 		$(CODEC_DIR)/tools/no_memory_manager.cc \
 		$(CODEC_DIR)/tools/jxl_from_tree.cc \
+		$(CODEC_DIR)/lib/extras/common.cc \
+		$(CODEC_DIR)/lib/extras/enc/apng.cc \
+		$(CODEC_DIR)/lib/extras/exif.cc \
+		$(CODEC_DIR)/lib/extras/dec/jxl.cc \
+		$(CODEC_DIR)/lib/extras/enc/encode.cc \
+		$(CODEC_DIR)/lib/extras/dec/color_description.cc \
 		$(CODEC_BUILD_DIR)/third_party/brotli/libbrotlidec.a \
 		$(CODEC_BUILD_DIR)/third_party/brotli/libbrotlienc.a \
 		$(CODEC_BUILD_DIR)/third_party/brotli/libbrotlicommon.a \
@@ -51,6 +60,7 @@ $(OUT_JS): jxl.cpp $(CODEC_BUILD_DIR)/lib/libjxl.a $(CODEC_BUILD_DIR)/lib/libjxl
 	-DBUILD_SHARED_LIBS=0 \
 	-DJPEGXL_ENABLE_BENCHMARK=0 \
 	-DJPEGXL_ENABLE_EXAMPLES=0 \
+	-DJPEGXL_BUNDLE_LIBPNG=1 \
 	-DBUILD_TESTING=0 \
 	-B $(@D) \
 	$(<D)
